# esp-idf-example

./: .gitignore
cmake_example/multi_components/: CMakeLists.txt  sdkconfig
cmake_example/multi_components/components/printf_hello_world/: CMakeLists.txt  hello_world.c
cmake_example/multi_components/components/printf_hello_world/include/: hello_world.h
cmake_example/multi_components/components/second_component/: CMakeLists.txt  second_component.c
cmake_example/multi_components/components/third_component/: CMakeLists.txt  third_component.c
cmake_example/multi_components/main/: CMakeLists.txt  user_main.c
cmake_example/my_project/: CMakeLists.txt
cmake_example/my_project/components/printf_hello_world/: CMakeLists.txt  hello_world.c
cmake_example/use_hello_world_lib/: sdkconfig
cmake_example/use_hello_world_lib/components/printf_hello_world/: CMakeLists.txt
cmake_example/use_multi_components_lib/components/printf_hello_world/: CMakeLists.txt
cmake_example/use_multi_components_lib/components/second_component/: CMakeLists.txt
cmake_example/use_multi_components_lib/components/second_component/include/: second_component.h
cmake_example/use_multi_components_lib/components/third_component/: CMakeLists.txt
flash_encryption/: sdkconfig  sdkconfig.old
flash_encryption/main/: flash_encrypt_main.c
mqtt_example/tcp/: sdkconfig  sdkconfig.old
mqtt_example/tcp/main/: app_main.c
timer_group/main/: timer_group_example_main.c
wifi_example/station/: sdkconfig  sdkconfig.old
wifi_example/station/main/: station_example_main.c
(+1 files in other folders)
